--- a/lib/libc/upmap/Makefile.inc
+++ b/lib/libc/upmap/Makefile.inc
@@ -10,3 +10,6 @@ CMAPS+=	${.CURDIR}/upmap/Symbol.map
 SRCS+=	upmap.c
 SRCS+=	ukp_clock.c ukp_getpid.c ukp_setproctitle.c ukp_setname.c
 SRCS+=	ukp_gettimeofday.c ukp_blocksigs.c
+
+MAN+=	sigblockall.3
+MLINKS+= sigblockall.3 sigunblockall.3
