world - Add support for lwp_getname() and pthread_get_name_np()
* Add support for the new system call lwp_getname()

* Add support for pthread_get_name_np(), rounding out that function
  set and improving ports compatibility.

--- a/lib/libc/sys/Makefile.inc
+++ b/lib/libc/sys/Makefile.inc
@@ -149,6 +149,7 @@ MLINKS+=link.2 linkat.2
 MLINKS+=lseek.2 seek.2
 MLINKS+=lwp_create.2 lwp_create2.2
 MLINKS+=lwp_setaffinity.2 lwp_getaffinity.2
+MLINKS+=lwp_setname.2 lwp_getname.2
 MLINKS+=madvise.2 mcontrol.2 \
 	madvise.2 posix_madvise.3
 MLINKS+=mkdir.2 mkdirat.2
