sys/boot: Define _STANDALONE while building.
 It will be used to limit visibility.  Do the same for lib/libstand.

--- a/lib/libstand/Makefile
+++ b/lib/libstand/Makefile
@@ -21,6 +21,7 @@ LIBSTAND_ARCH?=	${MACHINE_ARCH}
 LIBC_SRC=	${LIBSTAND_SRC}/../libc
 
 CFLAGS+=-D_LIBSTAND_
+CFLAGS+=	-D_STANDALONE
 
 # Mostly OK, some of the libc imports are a bit noisy
 CFLAGS+=	-ffreestanding
