stat(1): Fix -Wundef.

--- a/usr.bin/stat/Makefile
+++ b/usr.bin/stat/Makefile
@@ -1,6 +1,7 @@
 # $FreeBSD: head/usr.bin/stat/Makefile 216206 2010-12-05 21:33:05Z dougb $
 
 PROG=	stat
+CFLAGS+=-DHAVE_CONFIG_H=0
 
 LINKS=	${BINDIR}/stat ${BINDIR}/readlink
 MLINKS=	stat.1 readlink.1
