libexecinfo(3): Internalize libelf in symtab.c.
 Previous variant had symbol conflicts against ports libelf library.
 Use custom, cut down variant that provides basic set needed for
 libexecinfo symtab.c, ensure symbols are static and mangled.
 The libelf (as provided in contrib) is not very suitable for generic
 implementation of backtrace(3) function family.

 This is a temporary workaround to unbreak specific ports that are link
 against libelf and libexecinfo (including static compilations).

Reported-by: Romick@users

--- a/lib/libexecinfo/Makefile
+++ b/lib/libexecinfo/Makefile
@@ -12,6 +12,7 @@ MLINKS+=	backtrace.3 backtrace_symbols_fmt.3
 MLINKS+=	backtrace.3 backtrace_symbols_fd.3
 MLINKS+=	backtrace.3 backtrace_symbols_fd_fmt.3
 
+.if 0
 CONLIBS=	${.OBJDIR}/../libelf/libelf.a
 DPADD=		${CONLIBS:.a=_pic.a}
 LDADD=		${CONLIBS:.a=_pic.a}
@@ -58,5 +59,6 @@ script_p.ar:
 GENFILES=	script.ar script_p.ar
 CLEANFILES=	${GENFILES}
 beforedepend:	${GENFILES}
+.endif
 
 .include <bsd.lib.mk>
