drm/i915: Update to Linux commit b224c4dc70cdd5f42d24a7057148c6ace90e4f4e
"drm/i915: Unbreak interrupts on pre-gen6"

--- a/sys/dev/drm/i915/Makefile
+++ b/sys/dev/drm/i915/Makefile
@@ -8,6 +8,7 @@ SRCS =	i915_drv.c \
 	i915_suspend.c \
 	i915_sysfs.c \
 	intel_csr.c \
+	intel_device_info.c \
 	intel_pm.c \
 	intel_runtime_pm.c
 
@@ -27,6 +28,7 @@ SRCS +=	i915_cmd_parser.c \
 	i915_gem_tiling.c \
 	i915_gem_userptr.c \
 	i915_gpu_error.c \
+	intel_breadcrumbs.c \
 	intel_lrc.c \
 	intel_mocs.c \
 	intel_ringbuffer.c \
