login.conf: Don't dump /COPYRIGHT on users' screens when logging in.
This reverts e72f0762b947abfb33852312cbec661ce8761559.

The /etc/COPYRIGHT file is meant to be created by the local admin
and to be non-existent by default. It has nothing to do with our
/COPYRIGHT, except the name.

It looks like FreeBSD went through the same cycle. See their
revisions 70122 and 70189.

Also add a comment that explains what's intended.

Discussed-with: aly

--- a/etc/login.conf
+++ b/etc/login.conf
@@ -17,9 +17,14 @@
 # These settings are used by login(1) by default for classless users
 # Note that entries like "cputime" set both "cputime-cur" and "cputime-max"
 
+# NOTE that /etc/COPYRIGHT is a local file that an admin can create to
+# display additional copyright information to users on the system. It is
+# not part of the standard distribution of DragonFly, nor is it meant to
+# be identical to /COPYRIGHT.
+
 default:\
 	:passwd_format=sha512:\
-	:copyright=/COPYRIGHT:\
+	:copyright=/etc/COPYRIGHT:\
 	:welcome=/etc/motd:\
 	:setenv=MAIL=/var/mail/$,BLOCKSIZE=K,FTP_PASSIVE_MODE=YES:\
 	:path=/sbin /bin /usr/sbin /usr/bin /usr/games /usr/local/sbin /usr/local/bin /usr/pkg/sbin /usr/pkg/bin ~/bin:\
