--- a/etc/rc.d/Makefile
+++ b/etc/rc.d/Makefile
@@ -14,8 +14,7 @@ FILES=	DAEMON LOGIN NETWORKING SERVERS \
 	inetd initdiskless initrandom ip6addrctl ip6fw ipfw ipfw3 \
 	jail keyserv \
 	ldconfig local localdaemons lockd lpd lvm \
-	mixer modules motd mountcritlocal mountcritremote \
-	mountd moused mroute6d mrouted msgs \
+	mixer modules motd mountcritlocal mountcritremote mountd moused msgs \
 	named netif netoptions newsyslog \
 	network_ipv6 nfsclient nfsd nfsserver nisdomain nscd nsswitch \
 	othermta pf pflog powerd ppp pppoed pwcheck \
