dsynth - Enhance purge-distfiles directive
* Improve the distfiles list by using -VALLFILES instead of -VDISTFILES.

* Match up the related lock files so we can purge lock files that
  are no longer relevant.

--- a/usr.bin/dsynth/Makefile
+++ b/usr.bin/dsynth/Makefile
@@ -14,11 +14,13 @@ CFLAGS+=	-DSCRIPTDIR=${SHAREDIR}/dsynth
 LDADD+=		-lpthread -lutil
 DPADD+=		${LIBPTHREAD} ${LIBUTIL}
 
-# ncurses, DragonFlyBSD
+# ncurses, md5, for DragonFlyBSD
 #
 CFLAGS+=        -I${_SHLIBDIRPREFIX}/usr/include/priv/ncurses
+CFLAGS+=	${PRIVATELIB_CFLAGS}
 LDFLAGS+=       ${PRIVATELIB_LDFLAGS}
 LDADD+=		-lprivate_ncurses
+LDADD+=		-lprivate_crypto
 DPADD+=		${LIBNCURSES}
 
 LDADD+=		-lm
