kernel: Include syscons fonts in src-sys.tar.bz2 archive.
 This will be used to reduce host dependencies when building
 nativekernel from src-sys.tar.bz2.  Building kernel without syscons
 fonts is possible if SC_DFLT_FONT kernel options are not enabled.

--- a/nrelease/Makefile
+++ b/nrelease/Makefile
@@ -208,7 +208,8 @@ srcs:
 .else
 	( cd ${SRCDIR} && \
 		tar --exclude .git -s '/^\./src/' -cf - \
-			./Makefile ./Makefile.inc1 ./sys | \
+			./Makefile ./Makefile.inc1 ./sys \
+			./share/syscons/fonts | \
 			bzip2 -9 > ${ISOROOT}/usr/src-sys.tar.bz2 )
 .endif
 .endif
