share/zoneinfo: Do not hardcode zic(8) install flags.
 Will be used for unpriv builds.

--- a/share/zoneinfo/Makefile
+++ b/share/zoneinfo/Makefile
@@ -8,6 +8,8 @@ LEAPFILE=	-L leapseconds
 LEAPFILE=
 .endif
 
+ZIC_UG_FLAGS=	-u ${BINOWN} -g ${BINGRP}
+
 TZFILES=	africa antarctica asia australasia etcetera europe \
 		northamerica southamerica systemv
 TZFILES+=	dragonfly
@@ -37,7 +39,6 @@ yearistype: yearistype.sh
 beforeinstall:
 	umask 022; cd ${.CURDIR}; \
 	zic -D -d ${DESTDIR}/usr/share/zoneinfo -p ${POSIXRULES} \
-	    -u ${BINOWN} -g ${BINGRP} \
-	    ${LEAPFILE} -y ${YEARISTYPE} ${TZFILES}
+	    ${ZIC_UG_FLAGS} ${LEAPFILE} -y ${YEARISTYPE} ${TZFILES}
 
 .include <bsd.prog.mk>
