--- a/etc/defaults/make.conf
+++ b/etc/defaults/make.conf
@@ -117,6 +117,7 @@ THREAD_LIB?=	thread_xu
 #NO_CVS=	true	# do not build CVS
 #NO_GAMES=	true	# do not enter the games subdirectory
 #NO_GDB=	true	# do not build GDB
+#NO_INITRD=	true	# do not build initrd
 #NO_LPR=	true	# do not build lpr and related programs
 #NO_MODULES=	true	# do not build modules with the kernel
 #NO_SHARE=	true	# do not enter the share subdirectory
