Local changes for the flex upgrade.

--- a/usr.bin/flex/Makefile
+++ b/usr.bin/flex/Makefile
@@ -1,12 +1,12 @@
 CONTRIBDIR=	${.CURDIR}/../../contrib/flex
-.PATH:		${CONTRIBDIR}
+.PATH:		${CONTRIBDIR}/src
 .PATH:		${CONTRIBDIR}/doc
 
 PROG=	flex
 
 VMAJ=	2
-VMIN=	5
-VPT=	37
+VMIN=	6
+VPT=	4
 
 LINKS+= ${BINDIR}/flex ${BINDIR}/lex
 LINKS+= ${BINDIR}/flex ${BINDIR}/lex++
@@ -20,7 +20,7 @@ INCS=		FlexLexer.h
 
 SUBDIR=		lib
 
-CFLAGS+= 	-I${CONTRIBDIR} -I${.OBJDIR} -I${.CURDIR}
+CFLAGS+= 	-I${CONTRIBDIR}/src -I${.OBJDIR} -I${.CURDIR}
 CFLAGS+=	-DHAVE_CONFIG_H
 
 WARNS?= 	1
@@ -37,7 +37,6 @@ flex_SOURCES = \
 	nfa.c \
 	parse.y \
 	scan.l \
-	skel.c \
 	sym.c \
 	tblcmp.c \
 	yylex.c \
@@ -49,18 +48,11 @@ flex_SOURCES = \
 	filter.c \
 	regex.c
 
-SRCS=	${flex_SOURCES}
+SRCS=	${flex_SOURCES} skel.c
 
 skel.c: flex.skl mkskel.sh flexint.h tables_shared.h
-	sed -e 's/m4_/m4postproc_/g' \
-	    -e 's/m4preproc_/m4_/g' \
-	    ${CONTRIBDIR}/flex.skl \
-	| m4 -P -I ${CONTRIBDIR} \
-	   -D FLEX_MAJOR_VERSION=${VMAJ} \
-	   -D FLEX_MINOR_VERSION=${VMIN} \
-	   -D FLEX_SUBMINOR_VERSION=${VPT} \
-	| sed 's/m4postproc_/m4_/g' \
-	| sh ${CONTRIBDIR}/mkskel.sh > skel.c
+	sh ${CONTRIBDIR}/src/mkskel.sh \
+		${CONTRIBDIR}/src m4 ${VMAJ}.${VMIN}.${VPT} > skel.c
 
 DPADD=	${LIBM}
 LDADD=	-lm
