phantasia(6)/dsynth(1): Add two missing DPADD definitions.

--- a/usr.bin/dsynth/Makefile
+++ b/usr.bin/dsynth/Makefile
@@ -22,6 +22,7 @@ LDFLAGS+=       ${PRIVATELIB_LDFLAGS}
 LDADD+=		-lprivate_ncurses
 LDADD+=		-lprivate_crypto
 DPADD+=		${LIBNCURSES}
+DPADD+=		${LIBCRYPTO}
 
 LDADD+=		-lm
 DPADD+=		${LIBM}
