daemon(8): Sync with FreeBSD. Some ports need options we didn't have.
Mainly for -T, see https://github.com/DragonFlyBSD/DeltaPorts/issues/914

Most of the changes revolve around supporting logging the program's
output with syslog(3).

Reported-by: kworr
Taken-from:  FreeBSD

--- a/usr.sbin/daemon/Makefile
+++ b/usr.sbin/daemon/Makefile
@@ -1,4 +1,4 @@
-# $FreeBSD: head/usr.sbin/daemon/Makefile 201390 2010-01-02 11:07:44Z ed $
+# $FreeBSD: head/usr.sbin/daemon/Makefile 275054 2014-11-25 16:57:27Z bapt $
 
 PROG=	daemon
 MAN=	daemon.8
