localedef(1): Allow easier bootstrapping.
 Solves issue when bootstrapping on OpenBSD.

--- a/usr.bin/localedef/Makefile
+++ b/usr.bin/localedef/Makefile
@@ -20,4 +20,8 @@ CFLAGS+=	-I. -I${.CURDIR}
 CFLAGS+=	-I${.CURDIR}/../../lib/libc/locale
 CFLAGS+=	-I${.CURDIR}/../../lib/libc/stdtime
 
+.if defined(BOOTSTRAPPING)
+CFLAGS+=	-DBOOTSTRAPPING
+.endif
+
 .include <bsd.prog.mk>
