time(1): Disable -l support in btools.
 This removes kinfo(3) requirement to bootstrap time(1) on OpenBSD.

--- a/usr.bin/time/Makefile
+++ b/usr.bin/time/Makefile
@@ -1,8 +1,12 @@
 #	@(#)Makefile	8.1 (Berkeley) 6/6/93
-# $DragonFly: src/usr.bin/time/Makefile,v 1.4 2007/08/27 16:50:59 pavalos Exp $
 
 PROG=	time
+
+.if defined(BOOTSTRAPPING)
+CFLAGS+= -DBOOTSTRAPPING
+.else
 DPADD=	${LIBKINFO}
 LDADD=	-lkinfo
+.endif
 
 .include <bsd.prog.mk>
