binutils227: Explicitly include <stdint.h> and add CROSS_LIBDL.
 On glibc based systems dlopen() functionality is not in libc.

--- a/gnu/usr.bin/binutils227/block1/libbfd/Makefile
+++ b/gnu/usr.bin/binutils227/block1/libbfd/Makefile
@@ -75,7 +75,7 @@ elf64-gen.c elf64-x86-64.c: elf64-target.h
 cache.c elf32-i386.c elf64-x86-64.c: bfd_stdint.h
 
 bfd_stdint.h:
-	touch ${.TARGET}
+	echo "#include <stdint.h>" > ${.TARGET}
 
 targmatch.h: config.bfd targmatch.sed
 	sed -f ${CONTRIBDIR}/targmatch.sed < ${CONTRIBDIR}/config.bfd \
