gcc80: Make bootstrapping more permissive.
 To allow boostrapping on OpenBSD/Linux hosts:
 * provide CROSS_LIBDL knob when needed;
 * disable use of iconv in support libs;
 * disable werror in hostlibs.

--- a/gnu/usr.bin/cc80/Makefile.inc
+++ b/gnu/usr.bin/cc80/Makefile.inc
@@ -90,7 +90,7 @@ LIBZ=		${OTOPDIR}/../../../lib/libz/libz.a
 GMPLIBS=	${LIBMPC} ${LIBMPFR} ${LIBGMP}
 STDLIBS=	${LIBCOMMONTARG} ${LIBCOMMON} ${LIBCPP} \
 		${LIBBACKTRACE} ${LIBIBERTY} ${LIBDECNUMBER}
-BACKENDLIBS=	${GMPLIBS} ${LIBZ}
+BACKENDLIBS=	${GMPLIBS} ${LIBZ} ${CROSS_LIBDL}
 
 .if !defined(GCC_NO_LIBS)
 LDADD+=	${STDLIBS}
