tic(1): Explicitly disable WERROR in hostprog tic.
 This special version is used during buildworld.
 Helps with bootstrapping on OpenBSD.

--- a/lib/libncurses/tic_next/Makefile
+++ b/lib/libncurses/tic_next/Makefile
@@ -4,6 +4,7 @@ TERMINFO_CAPS=	${NCURSESDIR}/include/Caps
 
 PROG=		tic_next
 
+NO_WERROR=
 CFLAGS+=	-D_XOPEN_SOURCE_EXTENDED
 CFLAGS+=	-DENABLE_WIDEC
 CFLAGS+=	-DSET_NCURSES_CH_T=cchar_t
