--- a/lib/libc/sys/Makefile.inc
+++ b/lib/libc/sys/Makefile.inc
@@ -69,8 +69,8 @@ MAN+=	_exit.2 accept.2 access.2 acct.2 adjtime.2 bind.2 \
 	fcntl.2 fhopen.2 flock.2 fork.2 fsync.2 \
 	getdirentries.2 getdtablesize.2 \
 	getfh.2 getfsstat.2 getgid.2 getgroups.2 getitimer.2 getlogin.2 \
-	getpeername.2 getpgrp.2 getpid.2 getpriority.2 getrlimit.2 \
-	getrusage.2 getsid.2 getsockname.2 \
+	getpeername.2 getpgrp.2 getpid.2 getpriority.2 getrandom.2 \
+	getrlimit.2 getrusage.2 getsid.2 getsockname.2 \
 	getsockopt.2 gettimeofday.2 getuid.2 \
 	intro.2 ioctl.2 ioprio_get.2 issetugid.2 \
 	jail.2 jail_attach.2 kenv.2 kill.2 \
