install(1): Disable -N option in btools.
 Our installworld has installcheck and preupgrade and we do not make use
 of mtree -N option.  This removes hard dependency on pwcache(3).

--- a/usr.bin/xinstall/Makefile
+++ b/usr.bin/xinstall/Makefile
@@ -3,20 +3,15 @@
 
 PROG=		xinstall
 PROGNAME=	install
-SRCS=		xinstall.c getid.c
+SRCS=		xinstall.c
 MAN=		install.1
 
-.PATH:          ${.CURDIR}/../../usr.sbin/mtree
-CFLAGS+=        -DHAVE_NETDB_H -I${.CURDIR}/../../usr.sbin/mtree
-
 .if defined(BOOTSTRAPPING)
-.if ${WORLD_VERSION} < 500302 # pwcache(3) upgrades came in about here
-.PATH: ${.CURDIR}/../../lib/libc/gen
-SRCS+=	pwcache.c
-CFLAGS+=-I${.CURDIR}/../../lib/libc/include
-CFLAGS+=-include ${.CURDIR}/../../include/grp.h
-CFLAGS+=-include ${.CURDIR}/../../include/pwd.h
-.endif
+CFLAGS+=	-DBOOTSTRAPPING
+.else
+.PATH:          ${.CURDIR}/../../usr.sbin/mtree
+SRCS+=		getid.c
+CFLAGS+=        -DHAVE_NETDB_H -I${.CURDIR}/../../usr.sbin/mtree
 .endif
 
 .include <bsd.prog.mk>
