--- a/usr.bin/find/Makefile
+++ b/usr.bin/find/Makefile
@@ -2,8 +2,13 @@
 # $FreeBSD: src/usr.bin/find/Makefile,v 1.20 2010/02/10 07:15:21 ed Exp $
 
 PROG=	find
-SRCS=	find.c function.c ls.c main.c misc.c operator.c option.c \
-	getdate.y
+SRCS=	find.c function.c ls.c main.c misc.c operator.c option.c
+
+.if defined(BOOTSTRAPPING)
+CFLAGS+= -DBOOTSTRAPPING
+.else
+SRCS+=	getdate.y
 YFLAGS=
+.endif
 
 .include <bsd.prog.mk>
