grep(1): Disable use of unlocked IO in btools.
 Our use of grep during bootstrapping process does not require it and
 solves issues when bootstrapping utility on OpenBSD.

--- a/gnu/usr.bin/grep/grep/Makefile
+++ b/gnu/usr.bin/grep/grep/Makefile
@@ -11,6 +11,10 @@ CFLAGS+=	-I${BASEDIR}/src -I${.OBJDIR}
 CFLAGS+=	-I${BASEDIR}/lib -I${.CURDIR}/../libgreputils
 CFLAGS+=	-DHAVE_CONFIG_H
 
+.if defined(BOOTSTRAPPING)
+CFLAGS+=	-DBOOTSTRAPPING
+.endif
+
 DPADD=		../libgreputils/libgreputils.a
 LDADD=		../libgreputils/libgreputils.a
 BINDIR?=	/usr/bin
