Makefile.inc1: Pass _SHLIBDIRPREFIX for btools too.
 Allow to to link in with crossworld target built libraries if available.

 These are not needed for DragonFly crossworld target, however helps with
 bootstrapping on OpenBSD or glibc based systems where static versions
 are not available or mismatches the lex(1) too much.

--- a/Makefile.inc1
+++ b/Makefile.inc1
@@ -227,6 +227,7 @@ BMAKEENV=	MAKEOBJDIRPREFIX=${BTOOLSDEST} \
 		OBJTREE=${OBJTREE} \
 		DESTDIR=${BTOOLSDEST} \
 		LC_ALL=C \
+		_SHLIBDIRPREFIX=${BTOOLSDEST} \
 		PATH=${BTOOLSPATH}:${PATH} \
 		M4=${BTOOLSDEST}/usr/bin/m4 \
 		INSTALL="sh ${.CURDIR}/tools/install.sh"
