binutils234: Hook to the buildworld as alternative set.
 Requires changes in kernel and sys/boot/efi.

--- a/etc/mtree/BSD.usr.dist
+++ b/etc/mtree/BSD.usr.dist
@@ -96,6 +96,14 @@
             elf
             ..
         ..
+        binutils234
+            bfd-plugins
+            ..
+            ldscripts
+            ..
+            elf
+            ..
+        ..
         custom
         ..
         dhcpcd-hooks
