dsynth - Add HTML support
* Bring in progress.css, progress.html, progress.js, and icons from
  the synth project.  Add John's copyright to progress.js.

* dsynth now generates the logs/Report subdirectory, all necessary
  files, and dynamically generates the json.

  The summary.json database is updated every 10 seconds to reduce wear and
  tear.

* Split the history files in 50KB segments to reduce network traffic.

--- a/usr.bin/dsynth/Makefile
+++ b/usr.bin/dsynth/Makefile
@@ -9,6 +9,12 @@ SRCS+=	runstats.c ncurses.c monitor.c html.c
 SCRIPTS=mktemplate.sh
 SCRIPTSDIR= ${SHAREDIR}/dsynth
 
+# NOTE: The HTML support was directly transplanted from synth, written by
+#       John R. Marino <draco@marino.st>.
+#
+FILESDIR= ${SCRIPTSDIR}
+FILES= favicon.png progress.html progress.css progress.js dsynth.png
+
 CFLAGS+=	-pthread
 CFLAGS+=	-DSCRIPTDIR=${SHAREDIR}/dsynth
 LDADD+=		-lpthread -lutil
