kernel/vga_switcheroo: Add missing opt_ddb.h to the Makefile.

--- a/sys/dev/video/vga/Makefile
+++ b/sys/dev/video/vga/Makefile
@@ -1,6 +1,6 @@
 KMOD=	vga_switcheroo
 SRCS=	vga_switcheroo.c
-SRCS+=	device_if.h bus_if.h pci_if.h
+SRCS+=	opt_ddb.h device_if.h bus_if.h pci_if.h
 
 KCFLAGS+= -I${SYSDIR}/dev/drm/include
 KCFLAGS+= -I${SYSDIR}/dev/drm/include/uapi
