--- a/sys/gnu/dev/misc/apple_gmux/Makefile
+++ b/sys/gnu/dev/misc/apple_gmux/Makefile
@@ -1,7 +1,7 @@
 KMOD=	apple_gmux
 SRCS=	apple-gmux.c
-SRCS+=	device_if.h opt_acpi.h acpi_if.h bus_if.h pci_if.h
-SRCS+=	opt_ktr.h opt_drm.h
+SRCS+=	opt_acpi.h opt_ddb.h opt_drm.h opt_ktr.h
+SRCS+=	acpi_if.h bus_if.h device_if.h pci_if.h
 
 KCFLAGS+= -I${SYSDIR}/dev/drm/include
 KCFLAGS+= -I${SYSDIR}/dev/drm/include/uapi
